--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/bundle.css'>
-
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	<script defer src='/bundle.js'></script>
 </head>
 
